src/objects/RsvAccount__c.object
<CustomObject>
    <fields>
        <fullName>femails__c</fullName>
        <label>女性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fornt2__c</fullName>
        <label>本館-クーポン(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>front10__c</fullName>
        <label>本館-客数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>front13__c</fullName>
        <label>本館-男性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>front14__c</fullName>
        <label>本館-女性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>front1free__c</fullName>
        <label>本館-現計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>front2free__c</fullName>
        <label>本館-掛計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>front3free__c</fullName>
        <label>本館-内金</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>graphCustomers__c</fullName>
        <formula>if ( males__c + femails__c + Childs__c = 0, &quot;&quot;, IMAGE(&quot;http://chart.apis.google.com/&quot; &amp; &quot;chart?cht=p3&quot; &amp; &quot;&amp;chd=t:&quot; &amp; Text(males__c/(males__c + femails__c + Childs__c )) &amp; &quot;,&quot; &amp; Text(femails__c/(males__c + femails__c + Childs__c)) &amp; &quot;,&quot; &amp; Text(Childs__c/(males__c + femails__c + Childs__c)) &amp;  &quot;&amp;chs=250x100&quot; &amp; &quot;&amp;chf=bg,s,F3F3EC&amp;chl=Male|Female|Child&amp;chco=FF8C00&quot;,&quot;chart text&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客数内訳</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>males__c</fullName>
        <label>男性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nyuutouM__c</fullName>
        <label>入湯税の金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nyuutouzeiP__c</fullName>
        <label>入湯税の人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pointofbooking__c</fullName>
        <label>pointofbooking</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>restraunt1__c</fullName>
        <label>賑亭-売上計4(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>restraunt2__c</fullName>
        <label>賑亭-現計(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>restraunt3__c</fullName>
        <label>賑亭-クレジット(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>売上</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LockStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>予約会計名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>